fix: update checkbox styles for improved alignment and focus border color

--- a/frontend/src/components/List/ListItem.css
+++ b/frontend/src/components/List/ListItem.css
@@ -73,9 +73,10 @@ input[type="checkbox"] {
     height: 20px;
     border: 1px solid #555;
     border-radius: 4px;
-    /* background-color: white;  */
     cursor: pointer;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 input[type="checkbox"]:checked {
     background-color: var(--secondary-color);
@@ -87,9 +88,6 @@ input[type="checkbox"]:checked::after {
     color: white;
     font-size: 16px;
     text-align: center;
-    position: absolute;
-    left: 2px;
-    top: -1px;
 }
 
 .list-item-new-name-input {
@@ -105,7 +103,7 @@ input[type="checkbox"]:checked::after {
 }
 
 .list-item-new-name-input:focus {
-    border-color: #fff;
+    border-color: #fffcf7;
     border-bottom: 1px solid var(--secondary-color);
     outline: none;
 }
